1. fix: Aside 컴포넌트 차트 짤리는 것 z-index 해결 2.fix: reference page detail Id id-> courseId 수정

--- a/src/pages/Course/Reference/Detail/index.module.scss
+++ b/src/pages/Course/Reference/Detail/index.module.scss
@@ -80,4 +80,5 @@
   font-style: normal;
   font-weight: 400;
   color: $gray300;
+  padding-bottom: 18px;
 }
